# stm32-bootloader

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/linker/: app.ld
app/src/: main.c
bootloader/: CMakeLists.txt
bootloader/linker/: bootloader.ld
bootloader/src/: bl_crc32.c  bl_crc32.h  bl_flash.c  bl_flash.h  bl_proto.c  bl_proto.h  bl_uart.c  bl_uart.h  main.c  startup_stm32f411retx.s
cmake/: arm-none-eabi-gcc.cmake
docs/: protocol.md
host/: uploader.py
tests/host/: gen_frames.py  test_proto.c
